syntax = "proto3";

package auth;

option go_package="github.com/Andylixunan/insta/api/proto/auth";

service AuthService {
    rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse) {};
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {};
}

message GenerateTokenRequest {
    uint32 user_id = 1;
}

message GenerateTokenResponse {
    string token = 1;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
}